# anima-engine

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
src/game/: game.rs  game_loop.rs  mod.rs  mruby_game.rs
src/input/: input_event.rs  intermediate_event.rs  mod.rs
src/math/: bezier.rs  interpolate.rs  interpolator.rs  matrix.rs  mod.rs  quaternion.rs  vector.rs
src/scripting/: mod.rs
tests/: lib.rs
tests/input/: button.rs  cursor.rs  mod.rs  selectable_area.rs
tests/math/: matrix.rs  mod.rs  quaternion.rs  vector.rs
